Fix the alignment in the footer
Good news: grid does work the way I thought, I was being silly and changing the font-size
on the <footer> element, which made the max size of the content column (60ch) smaller than
the others. By setting the font-size on all the children of the footer instead of the
footer itself, the grid lines up with the other two grids on the page.

--- a/src/_scss/components/_site-footer.scss
+++ b/src/_scss/components/_site-footer.scss
@@ -2,7 +2,14 @@
 @use "../mixins/typography" as *;
 
 #site-footer {
-  @include font-size(-2);
+
+  // Set the font-size on children of the footer instead of the footer itself so that the
+  // grid column whose max width is 60ch is the same as the other grids on the page. If we
+  // make the font-size smaller on the footer, 60ch is narrower than other grids and the
+  // grids don't align.
+  & > * {
+    @include font-size(-2);
+  }
 
   color: tokens.color("slate");
 }
